--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,10 @@
+#
+# Makefile for libcss
+#
+# Copyright 2014 Vincent Sanders <vince@netsurf-browser.org>
+#
+# Released under the MIT License (see COPYING file)
+
 # Sources
 DIR_SOURCES := stylesheet.c
 
