Add support for CSS3 overflow-x and overflow-y properties.
  Now, overflow is a shorthand property setting both overflow-x and
  overflow-y.

  The getter for the computed overflow has been removed, and replaced
  with two for overflow-x and overflow-y.

--- a/src/parse/properties/Makefile
+++ b/src/parse/properties/Makefile
@@ -53,6 +53,7 @@ DIR_SOURCES :=				\
 	margin.c			\
 	opacity.c			\
 	outline.c			\
+	overflow.c			\
 	padding.c			\
 	pause.c				\
 	play_during.c			\
