Update to use correct BUILD/HOST variables due to buildsystem changes

--- a/src/parse/properties/Makefile
+++ b/src/parse/properties/Makefile
@@ -7,7 +7,7 @@ define build_gen_parser
 
 $(BUILDDIR)/gen_parser: $(DIR)css_property_parser_gen.c
 	$$(VQ)$$(ECHO) $$(ECHOFLAGS) " PREPARE: $$@"
-	$$(Q)$$(HOST_CC) -o $$@ $$^
+	$$(Q)$$(BUILD_CC) -o $$@ $$^
 
 endef
 
