--- a/src/select/Makefile
+++ b/src/select/Makefile
@@ -1,4 +1,4 @@
 # Sources
-DIR_SOURCES := computed.c dispatch.c hash.c select.c font_face.c
+DIR_SOURCES := arena.c computed.c dispatch.c hash.c select.c font_face.c
 
 include $(NSBUILD)/Makefile.subdir
