--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,6 @@
 DIR_TEST_ITEMS := csdetect:csdetect.c css21:css21.c lex:lex.c \
 	lex-auto:lex-auto.c number:number.c \
 	parse:parse.c parse-auto:parse-auto.c parse2-auto:parse2-auto.c \
-	select-no-nd:select-no-nd.c select-nd:select-nd.c
+	select:select.c
 
 include $(NSBUILD)/Makefile.subdir
