--- a/src/select/Makefile
+++ b/src/select/Makefile
@@ -1,4 +1,8 @@
 # Sources
+select_generator:
+	python3 src/select/select_generator.py
+
 DIR_SOURCES := arena.c computed.c dispatch.c hash.c select.c font_face.c
+PRE_TARGETS := select_generator
 
 include $(NSBUILD)/Makefile.subdir
