--- a/src/select/Makefile
+++ b/src/select/Makefile
@@ -2,6 +2,6 @@
 select_generator:
 	python3 src/select/select_generator.py
 
-DIR_SOURCES := arena.c computed.c dispatch.c hash.c select.c font_face.c format_list_style.c unit.c
+DIR_SOURCES := arena.c computed.c dispatch.c hash.c select.c strings.c font_face.c format_list_style.c unit.c
 
 include $(NSBUILD)/Makefile.subdir
