Add support for SVG fill-opacity property
  https://www.w3.org/TR/SVGTiny12/painting.html#FillOpacityProperty

This property is unique to SVG documents, but is otherwise analogous
to the usual CSS "opacity" property.

--- a/src/parse/properties/Makefile
+++ b/src/parse/properties/Makefile
@@ -45,6 +45,7 @@ DIR_SOURCES :=				\
 	cue.c				\
 	cursor.c			\
 	elevation.c			\
+	fill_opacity.c			\
 	flex.c				\
 	flex_flow.c			\
 	font.c				\
