Add support for SVG stroke-opacity property
  https://www.w3.org/TR/SVGTiny12/painting.html#StrokeOpacityProperty

This property is unique to SVG documents, but is otherwise analogous
to the usual CSS "opacity" property (and the recently-added SVG
fill-opacity property).

--- a/src/parse/properties/Makefile
+++ b/src/parse/properties/Makefile
@@ -62,6 +62,7 @@ DIR_SOURCES :=				\
 	play_during.c			\
 	properties.c			\
 	quotes.c			\
+	stroke_opacity.c		\
 	text_decoration.c		\
 	utils.c				\
 	voice_family.c
