ci: actions: Use matching branch name for deps if available

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
       run: |
           export TARGET_WORKSPACE="$(pwd)/projects"
           source projects/env.sh
-          ns-clone -d -s
+          ns-clone -d -s -b ${GITHUB_REF_NAME}
           ns-make-libs install
 
     - name: Build Library
